# XEnvMananger

./: Cargo.toml  LICENSE  README.en.md  README.md  protocol.md
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: xenvmanager-technical-plan.md
.sisyphus/evidence/: task-1-ci-gates.txt  task-2-no-protocol.txt  task-2-protocol-ok.json  task-3-skip-missing-required.txt  task-3-skip-protocol-ok.txt  task-4-integration-skip-preset.txt
.sisyphus/notepads/xenvmanager-implementation-plan/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: xenvmanager-implementation-plan.md
presets/: aws.json  docker.json  opencode.json
src/: lib.rs  main.rs  paths.rs
src/cli/: mod.rs
src/config/: model.rs  store.rs
src/executor/: mod.rs
src/keyring/: mod.rs
src/presets/: mod.rs
src/protocol/: mod.rs
src/tui/: mod.rs
tests/: presets_init.rs  protocol.rs  skip.rs  skip_subcommand.rs
