[package]
name = "em"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.5.4", features = ["derive"] }

# Core data model + persistence
serde = { version = "=1.0.197", features = ["derive"] }
serde_json = "=1.0.114"
directories = "=5.0.1"
tempfile = "=3.10.1"
thiserror = "=1.0.58"
unicode-segmentation = "=1.11.0"

dbus-secret-service = { version = "=4.0.0-rc.2", features = ["crypto-rust"] }

# TUI
ratatui = "=0.26.1"
crossterm = "=0.27.0"

# Errors
color-eyre = "=0.6.3"
